Apply patches by romain: 	- Initialize flags argument correctly in get_vnode. 	- Fix issues with handling the FAT mirror incorrectly.

Should resolve ticket #3690 and possibly others.



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35434 a95241bf-73f2-0310-859d-f6bbb57e9c96